kubernetes/base/ingress/ingress-nginx-metrics-path.yaml
apiVersion: v1 # patch not working in GH actions
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  ports:
    - name: metrics
      port: 10254
      protocol: TCP
      targetPort: metrics
